Ticket import via QR code scan added

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+	<!-- M E T A -->
+
 	<meta charset="utf-8">
+	<title>Digital Convention Guide</title>
 
 	<!-- SEO DescriptiOptimization -->
 	<meta name="Description" content="Digital convention guide for GalaCon. By Pony Events Federation e.V., Kamen, Germany.">
-	<link rel="canonical" href="https://data.pony-events.eu/webapps/philomena/index.html"/>
 
 	<!-- Mobile Device Optimization -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<!-- PWA manifest -->
-	<link rel="manifest" href="pwa-manifest.json">
 
 	<!-- Add to home screen for Safari on iOS -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,7 +24,36 @@
 	<meta name="msapplication-TileColor" content="#386CC1">
 	<meta name="theme-color" content="#164391">
 
-	<title>Digital Convention Guide</title>
+	
+	<!-- L I N K S -->
+	
+	<!-- PWA manifest -->
+	<link rel="manifest" href="pwa-manifest.json">
+
+	<!-- SEO Optimization -->
+	<link rel="canonical" href="https://data.pony-events.eu/webapps/philomena/index.html"/>
+
+
+	<!-- S C R I P T S -->
+
+	<!-- QR Code Scanner - see https://github.com/Lazarsoft/jsqrcode -->
+	<script type="text/javascript" src="assets/qrcode/grid.js"></script>
+	<script type="text/javascript" src="assets/qrcode/version.js"></script>
+	<script type="text/javascript" src="assets/qrcode/detector.js"></script>
+	<script type="text/javascript" src="assets/qrcode/formatinf.js"></script>
+	<script type="text/javascript" src="assets/qrcode/errorlevel.js"></script>
+	<script type="text/javascript" src="assets/qrcode/bitmat.js"></script>
+	<script type="text/javascript" src="assets/qrcode/datablock.js"></script>
+	<script type="text/javascript" src="assets/qrcode/bmparser.js"></script>
+	<script type="text/javascript" src="assets/qrcode/datamask.js"></script>
+	<script type="text/javascript" src="assets/qrcode/rsdecoder.js"></script>
+	<script type="text/javascript" src="assets/qrcode/gf256poly.js"></script>
+	<script type="text/javascript" src="assets/qrcode/gf256.js"></script>
+	<script type="text/javascript" src="assets/qrcode/decoder.js"></script>
+	<script type="text/javascript" src="assets/qrcode/qrcode.js"></script>
+	<script type="text/javascript" src="assets/qrcode/findpat.js"></script>
+	<script type="text/javascript" src="assets/qrcode/alignpat.js"></script>
+	<script type="text/javascript" src="assets/qrcode/databr.js"></script>
 
 	<!-- OpenUI5 Bootstrap -->
 	<script id="sap-ui-bootstrap"
