Bug fix in map texts

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 	<script type="text/javascript" src="assets/qrcode/alignpat.js"></script>
 	<script type="text/javascript" src="assets/qrcode/databr.js"></script>
 
+	<!-- QR Code Generator - see https://github.com/neocotic/qrious -->
+	<script type="text/javascript" src="assets/qrcode/qrious.js"></script>
+
 	<!-- OpenUI5 Bootstrap -->
 	<script id="sap-ui-bootstrap"
 		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
